--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "d3": "^6.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "resize-observer-polyfill": "^1.5.1",
     "web-vitals": "^0.2.4"
