--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "browserify-fs": "^1.0.0",
     "d3": "^6.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "resize-observer-polyfill": "^1.5.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "write-json-file": "^4.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
